# testtaskbs02

./: .env.example  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
artifacts/artifacts/: report.html
artifacts/artifacts/allure-results/: 00772a10-8054-480e-a793-b956167424d0-container.json  0091a246-23cc-40a6-986d-fd642c477177-container.json  010f8e0b-3f62-483c-a127-5d868db04fed-container.json  0131d9fc-6c5c-4c45-856e-86b751128714-attachment.txt  018497c9-e24f-48fd-b0d6-0254c9885f2b-attachment.json  0219ab7d-cbde-4554-b27b-65d9906adb48-container.json  02732832-846c-40b2-9a9b-25edd1bbfa12-container.json  0291e9fb-ee2f-44da-a427-aaa6b78e687c-attachment.json  02943370-8f4c-46f5-b966-804f95ad0c36-container.json  0363b4b3-83bc-4532-b305-e3bbe8f81547-container.json  04bec396-a14b-49ad-b136-cf65f1c0ff94-result.json  05f5abc2-e5e1-4024-8899-81f38fce76d0-container.json  07486d61-8e53-4925-911e-6e3552dae554-result.json  (+187 more)
config/: config.yaml
docker/: Dockerfile.tests  docker-compose.yml
docker/grafana/: Dockerfile
docker/prometheus/: prometheus.yml
framework/: config.py  data_gen.py  http_client.py  logging.py  metrics.py  models.py  retry.py
framework/api/: httpbin_api.py
framework/reporting/: allure_helpers.py
tests/: conftest.py
tests/data/: test_boundaries.py
tests/integration/: test_messaging_rabbitmq.py
tests/regression/: test_request_inspection.py
tests/resilience/: test_retry_policy.py  test_timeouts.py
tests/smoke/: test_dynamic_data.py  test_response_formats.py
(+3 files in other folders)
